# training

./: .coverage  .gitignore  README.md  Untitled Diagram.drawio  main.tf  mount.sh  output.tf  variables.tf  volume_id.txt
.github/workflows/: CI.yml  deploy-infrastructure.yml  terraform.yml  tf-apply.yml
App/: app.py  requirements.txt
App/Release/: README.MD
App/templates/: paper.html
Diagrams/: Application.drawio  CI.drawio  tf_apply.drawio
Infrastructure/: main.tf  mount.sh  output.tf  variables.tf
Infrastructure/add-vol-to-vm-module/: variables.tf
Infrastructure/vm-module/: compute.tf
Tests/: .coverage  mount_test.py  test_app.py
app/: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
app/templates/: home.html  layout.html  rock.html  scissors.html
diagrams/: tf_apply.drawio
infrastructure/: main.tf
infrastructure/add-vol-to-vm-module/: compute.tf  main.tf  output.tf
infrastructure/basic-bastion-infrastructure/: main.tf  mount.sh
infrastructure/bastion-module/: main.tf  outputs.tf  variables.tf
infrastructure/k8s-cluster/: eks.tf  load-balancer.tf  main.tf  networking.tf  variables.tf
infrastructure/modules/add-eks-private-subnet/: networking.tf  outputs.tf  variables.tf
infrastructure/modules/bastion-module/: compute.tf  networking.tf
infrastructure/modules/vm-module/: main.tf  outputs.tf  variables.tf
script/: sem-ver-action.py
tests/: .coverage  mount_test.py  test_app.py
